# PSGameJam14

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  todo.md
assets/: manifest.json
assets/nca/audio_clip/: engine_running.nca  engine_start.nca  engine_stop.nca  lose.nca  morph_healthy.nca  morph_infected.nca  purify.nca  spray1.nca  vehicle_crash01.nca  vehicle_crash02.nca  vehicle_crash03.nca
assets/nca/concave_collider/: terrain01_collider.nca  terrain02_collider.nca  terrain_curve01_collider.nca  terrain_curve02_collider.nca  terrain_inlet_collider.nca
assets/nca/hull_collider/: terrain01_collider.nca
assets/nca/mesh/: aloe.nca  aspens.nca  bus_car.nca  bus_front.nca  dave.nca  decorative_tree01.nca  fern.nca  fire.nca  firepit.nca  floor.nca  grass.nca  headstone.nca  pine.nca  rock.nca  spreader_tree.nca  statue.nca  terrain01.nca  terrain02.nca  terrain_curve01.nca  terrain_curve02.nca  terrain_edge.nca  terrain_inlet.nca  tree01.nca  tree02.nca  vegetation01.nca
assets/nca/skeletal_animation/: dave_idle.nca  dave_idle_sit_to_stand_ground.nca  dave_idle_sitting_ground.nca  dave_idle_sitting_stump.nca  dave_sit_to_stand_stump.nca  dave_tinkering.nca  dave_walk_in_circle.nca  dave_wave.nca  fire_flicker.nca
assets/nca/texture/: blight_particle.nca  quest_indicator_particle.nca  roundemup_particle.nca  title_screen.nca  to_healthy_particle.nca  to_infected_particle.nca
assets/raw/mesh/: aloe.fbx  aspens.fbx  bus.fbx  bus_car.fbx  dave.fbx  decorative_tree01.fbx  fern.fbx  fire.fbx  firepit.fbx  floor.fbx  grass.fbx  headstone.fbx  pine.fbx  rock.fbx  statue.fbx  terrain01.fbx  terrain01_collider.fbx  terrain02.fbx  terrain02_collider.fbx  terrain_curve01.fbx  terrain_curve01_collider.fbx  terrain_curve02.fbx  terrain_curve02_collider.fbx  terrain_flat_edge.fbx  terrain_inlet.fbx  terrain_inlet_collider.fbx  tree01.fbx  vegetation01.fbx
assets/raw/skeletal_animation/: dave.fbx
assets/raw/texture/: terrain_curve01.fbx
backup/1/prefab/: grass1  rock_cluster1  terrain_inlet1
backup/1/scene/: level
backup/10/: level
backup/13/: level
backup/16/: level
backup/19/: level
backup/2/prefab/: aloe1  rock1  rock_blockade1  terrain1  terrain_curve2
backup/2/scene/: level
backup/20/: level
backup/3/: level
backup/4/: level
backup/5/: level
backup/8/: level
backup/9/: level
prefab/: aspen  fern  grass_blockade1  grass_fluff  healthy_tree1  pine  pines  sasquatch  terrain1  terrain2  terrain_curve1  terrain_curve2  terrain_edge  terrain_inlet1  test_prefab
scene/: level  terrain  test_scene
source/game/: Assets.cpp  Assets.h  CMakeLists.txt  Character.cpp  Character.h  Core.cpp  Core.h  DebugCamera.h  Dialog.h  Environment.cpp  Environment.h  Event.cpp  Event.h  FollowCamera.cpp  FollowCamera.h  GameMain.cpp  GameplayOrchestrator.cpp  GameplayOrchestrator.h  MainScene.cpp  MainScene.h  Node.cpp  Node.h  QuestTrigger.h  Sasquatch.cpp  Sasquatch.h  Tree.cpp  Tree.h  UI.cpp  UI.h  UIStyle.cpp  UIStyle.h
source/game/ui/: CMakeLists.txt  DialogUI.cpp  DialogUI.h  UI.cpp  UI.h  UIStyle.cpp  UIStyle.h
